# P2_Start_L3

./: main.py  pyproject.toml
.github/workflows/: publish.yml
startcode/: image_napper.py  snippets.py
startcode/extra/: auto_clicker_simpel.py
startcode/kraak_pdf/: kraak_pdf.py  woorden.txt
